<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manugiulia.pcpv1.Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="20dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                app:civ_border="true"
                app:civ_border_width="2dp"
                app:civ_shadow="true"
                app:civ_shadow_color="@android:color/black"
                app:civ_shadow_radius="1"
                android:id="@+id/perfilImagem"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"/>
<!--            <View
                android:visibility="gone"
                android:background="@drawable/circulo"
                android:layout_gravity="center_horizontal"
                android:layout_width="140dp"
                android:layout_height="140dp" />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/Mudar_Foto"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nome" />

            <EditText
                android:id="@+id/editarPerfil_edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/Nome"
                android:inputType="textCapWords"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Apelido" />

            <EditText
                android:id="@+id/editarPerfil_edtApelido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/Apelido"
                android:textColor="@android:color/black"
                android:inputType="textCapWords"
                android:textColorHint="@android:color/darker_gray"/>


            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DataDeNasc" />

            <EditText
                android:id="@+id/editarPerfil_edtDataDeNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/DataDeNasc"
                android:inputType="date"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>


            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/editarPerfil_edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>


            <TextView
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Senha" />

            <EditText
                android:id="@+id/editarPerfil_edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:hint="@string/Senha"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>


        </LinearLayout>

        <info.hoang8f.widget.FButton
            android:id="@+id/salvarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btnSalvar"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:fButtonColor="@color/fbutton_color_midnight_blue"
            app:shadowEnabled="false" />
    </LinearLayout>
</ScrollView>